<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LucesFuera</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="easy">Easy</string>
    <string name="normal">Normal</string>
    <string name="difficult">Difficult</string>
    <string name="extreme">Extreme</string>
    <string name="exit">Exit</string>
    <string name="title_activity_extremo">Extremo</string>
    <string name="imagen">Imagen</string>
    <string name="reset">Reset</string>
    <string name="Back">Back</string>
    <string name="title_activity_terminado">Terminado</string>
    <string name="terminado">Well Done! Congratulation!</string>

</resources>
