<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lucesfuera.taos.MainMenu"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4116840717941176/3363568442" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/myboton"
            android:onClick="onFacil"
            android:text="@string/easy"
            android:textColor="#00FF33"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/myboton"
            android:onClick="onNormal"
            android:text="@string/normal"
            android:textColor="#339999"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/myboton"
            android:onClick="onDificil"
            android:text="@string/difficult"
            android:textColor="#CC6600"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/myboton"
            android:onClick="onExtremo"
            android:text="@string/extreme"
            android:textColor="#CC0000"
            android:textSize="28sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/myboton"
            android:onClick="onSalir"
            android:text="@string/exit"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

</FrameLayout>