<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo7"
    tools:context="com.lucesfuera.taos.Extremo"
    tools:ignore="MergeRootFrame" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-4116840717941176/3363568442" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button1"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:background="@drawable/fondo7"
                android:onClick="onBack"
                android:text="@string/Back"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="0dp"
                android:layout_height="50sp"
                android:layout_weight="1"
                android:background="@drawable/fondo7"
                android:onClick="onReset"
                android:text="@string/reset"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" >

                <ImageButton
                    android:id="@+id/b11"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on11"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on12"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b13"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on13"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b14"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on14"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b15"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on15"
                    android:src="@drawable/lightoff" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/b21"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on21"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b22"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on22"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b23"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on23"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b24"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on24"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b25"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on25"
                    android:src="@drawable/lightoff" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/b31"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on31"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b32"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on32"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b33"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on33"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b34"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on34"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b35"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on35"
                    android:src="@drawable/lightoff" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/b41"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on41"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b42"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on42"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b43"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on43"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b44"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on44"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b45"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on45"
                    android:src="@drawable/lightoff" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <ImageButton
                    android:id="@+id/b51"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on51"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b52"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on52"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b53"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on53"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b54"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on54"
                    android:src="@drawable/lightoff" />

                <ImageButton
                    android:id="@+id/b55"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#000000"
                    android:contentDescription="@string/imagen"
                    android:onClick="on55"
                    android:src="@drawable/lightoff" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</FrameLayout>